# debian-ltt-control

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  ltt-control_0.86-19052010.orig.tar.gz.delta  ltt-control_0.86-19052010.orig.tar.gz.id  ltt-control_0.87-09062010.orig.tar.gz.delta  ltt-control_0.87-09062010.orig.tar.gz.id  ltt-control_0.88-09242010.orig.tar.gz.delta  ltt-control_0.88-09242010.orig.tar.gz.id  ltt-control_0.89-05122011.orig.tar.gz.delta  ltt-control_0.89-05122011.orig.tar.gz.id  ltt-control_2.0.3.orig.tar.gz.delta  ltt-control_2.0.3.orig.tar.gz.id  ltt-control_2.1.0~rc2.orig.tar.gz.delta  ltt-control_2.1.0~rc2.orig.tar.gz.id  ltt-control_2.1.0~rc3.orig.tar.gz.delta  ltt-control_2.1.0~rc3.orig.tar.gz.id  ltt-control_2.1.0~rc4.orig.tar.gz.delta  ltt-control_2.1.0~rc4.orig.tar.gz.id  ltt-control_2.1.0~rc5.orig.tar.gz.delta  ltt-control_2.1.0~rc5.orig.tar.gz.id  ltt-control_2.1.0~rc6.orig.tar.gz.delta  ltt-control_2.1.0~rc6.orig.tar.gz.id  ltt-control_2.1.0~rc7.orig.tar.gz.delta  ltt-control_2.1.0~rc7.orig.tar.gz.id  ltt-control_2.1.0~rc8.orig.tar.gz.delta  ltt-control_2.1.0~rc8.orig.tar.gz.id  ltt-control_2.1.0~rc9.orig.tar.gz.delta  ltt-control_2.1.0~rc9.orig.tar.gz.id  ltt-control_2.1.1.orig.tar.gz.delta  ltt-control_2.1.1.orig.tar.gz.id  ltt-control_2.10.0~rc2.orig.tar.bz2.id  ltt-control_2.3.0.orig.tar.gz.delta  ltt-control_2.3.0.orig.tar.gz.id  ltt-control_2.4.0.orig.tar.gz.delta  ltt-control_2.4.0.orig.tar.gz.id  ltt-control_2.4.0~rc4.orig.tar.gz.delta  (+34 more)
config/: libtool.m4
debian/: changelog  control  copyright  copyright-scan-patterns.yml  liblttctl-dev.install  liblttctl0.install  liblttd-dev.install  liblttd0.install  liblttng-ctl-dev.install  liblttng-ctl0.install  liblttng-ctl0.symbols  ltt-armall.1  ltt-armall.1.md  ltt-armtap.1  ltt-armtap.1.md  ltt-bin.manpages  ltt-disarmall.1  ltt-disarmall.1.md  ltt-disarmtap.1  ltt-disarmtap.1.md  lttctl.1  lttd.1  (+14 more)
lttctl/: Makefile.am  Makefile.in  ltt-armall.sh  ltt-armtap.sh  ltt-disarmall.sh  ltt-disarmtap.sh  lttctl.c
(+155 files in other folders)
